deployments/kubernetes/stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: laa-sds-clamav
  labels:
    app: laa-sds-clamav
spec:
  serviceName: "laa-sds-clamav-service"
  replicas: 1
  selector:
    matchLabels:
      app: laa-sds-clamav
  template:
    metadata:
      labels:
        app: laa-sds-clamav
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: laa-sds-clamav
          image: ghcr.io/ministryofjustice/clamav-docker/laa-clamav:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: laa-sds-clamav-data
              mountPath: "/var/lib/clamav"
          resources:
            requests:
              memory: "4Gi"
            limits:
              memory: "5Gi"
          ports:
            - containerPort: 3310
  volumeClaimTemplates:
  - metadata:
      name: laa-sds-clamav-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
