deployments/kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: laa-sds-service
spec:
  selector:
    app: laa-sds-api
  ports:
    - name: https
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: laa-sds-clamav-service
spec:
  selector:
    app: laa-sds-clamav
  ports:
    - port: 3310
