deployments/kubernetes/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laa-sds-ingress
  namespace: laa-sds-dev
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 35.178.209.113/32,3.8.51.207/32,35.177.252.54/32,18.169.147.172/32,35.176.93.186/32,18.130.148.126/32,35.176.148.126/32,51.149.250.0/24,51.149.249.0/29,194.33.249.0/29,51.149.249.32/29,194.33.248.0/29,20.49.214.199/32,20.49.214.228/32,20.26.11.71/32,20.26.11.108/32,194.33.200.0/21,194.33.216.0/23,194.33.218.0/24,128.77.75.64/26
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,deny,log,status:403,tag:github_team=secure-doc-storage-team"
    external-dns.alpha.kubernetes.io/set-identifier: laa-sds-ingress-${KUBE_NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: modsec-non-prod
  tls:
    - hosts:
        - ${KUBE_NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: ${KUBE_NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: laa-sds-service # this should match the metadata.name in service.yml
                port:
                  number: 8000
